feat(layout): add dataset view with draggable sidebar, datasets picker, etc

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -22,3 +22,9 @@
 @import "profile";
 @import "compare";
 @import "stylesheet";
+
+@import "dataset-container";
+
+#app, #app-container {
+  height: 100%;
+}
