--- a/app/scss/_site.scss
+++ b/app/scss/_site.scss
@@ -586,8 +586,13 @@
   position: absolute;
   width: 100%;
   height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   top: 0;
+  right: 0;
   left: 0;
+  bottom: 0;
 }
 
 .welcome-center {
@@ -599,14 +604,26 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-evenly; 
 }
 
 .welcome-accept {
   display: flex;
   flex-direction: row-reverse;
-  justify-conent: space-between;
+  justify-content: space-between;
   align-items: baseline;
+}
+
+.welcome-graphic {
+  margin: auto;
+  margin-bottom: 0;
+  margin-top: 0;
+  height: 150px;
+  width: 150px;
+}
+
+.welcome-title {
+  text-align: center;
 }
 
 html, body, #root, #app {
@@ -731,7 +748,7 @@ b {
   transition: none;
 }
 
-.navLink:hover, {
+.navLink:hover {
   color: $primary;
 }
 
