--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -25,6 +25,6 @@
 @import "compare";
 @import "stylesheet";
 
-#app, #app-container {
-  height: 100%;
-}
+@import "dataset";
+@import "welcome";
+@import "flex";
