--- a/app/scss/_dataset-container.scss
+++ b/app/scss/_dataset-container.scss
@@ -58,6 +58,7 @@
     .content {
       background-color: #d8d8d8;
       flex: 1;
+      position: relative;
 
       .overlay {
         position: absolute;
@@ -130,32 +131,21 @@
 //     Dataset Sidebar    //
 ////////////////////////////
 
-#dataset-sidebar {
+.dataset-sidebar {
   height: 100%;
-  width: 100%;
-
-  .sidebar-row {
-    width: 100%;
-    font-size: .9rem;
-    border-bottom: 1px solid #979797;
-    cursor: default;
-    &:last-child {
-        border-right: 0;
-    }
-  }
+  font-size: .9rem;
+  cursor: default;
 
   #tabs {
-    width: 100%;
     height: 30px;
-    background-color: #FFF;
-    cursor: default;
+    display: flex;
 
     .tab {
       width: 50%;
-      display: inline-block;
       height: 100%;
-      padding: 6px;
+      flex: 1;
       text-align: center;
+      line-height: 1.9rem;
       border-right: 1px solid #979797;
 
       &:last-child {
@@ -178,50 +168,47 @@
     background-color: #F6F8FA;
   }
 
-  .file-row {
-    height: 60px;
-    padding: 8px;
+  $list-item-bottom-border: 1px solid #979797;
+  $sidebar-item-padding:  8px;
 
-    .label {
-      font-weight: 600;
-      font-size: 1.2rem;
-    }
-
-    &:hover {
-      background-color: #efefef;
-    }
-  }
-}
-
-////////////////////////////
-//   History List Item    //
-////////////////////////////
-
-.history-list-item {
-  .title {
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    line-height: 1.6rem;
-  }
-
-  .userTimeInfo {
+  // sidebar list items
+  .sidebar-list-item {
+    border-bottom: $list-item-bottom-border;
     display: flex;
+  }
 
-    .user-image {
-      height: 16px;
-      width: 16px;
-      margin-right: 4px;
-      border-radius: 2px;
+  .sidebar-list-item-text {
+    padding: $sidebar-item-padding;
+    flex-direction: column;
+
+    .text {
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      line-height: 1.6rem;
     }
 
-    .time-message {
+    .subtext {
+      display: flex;
+
+      .user-image {
+        height: 16px;
+        width: 16px;
+        margin-right: 4px;
+        border-radius: 2px;
+      }
+
       flex: 1;
       font-size: .65rem;
       line-height: 1.2rem;
       white-space: nowrap;
       text-overflow: ellipsis;
       overflow: hidden;
+    }
+
+    .strong-message {
+      font-weight: 500;
+      font-size: 0.8rem;
     }
   }
 }
