style(DatasetSidebar): change style

--- a/app/scss/_dataset.scss
+++ b/app/scss/_dataset.scss
@@ -157,7 +157,7 @@ $hover-highlight-color: #F6F8FA;
       }
 
       &.active {
-        border-bottom: 3px solid #0666D6;
+        border-bottom: 3px solid #315379;
       }
 
       &:hover {
