--- a/app/scss/_welcome.scss
+++ b/app/scss/_welcome.scss
@@ -13,41 +13,101 @@
     right: 0;
     left: 0;
     bottom: 0;
-    z-index: 99;
-  }
-  
-  .welcome-center {
-    width: 600px;
-    padding: 5em;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly; 
-  }
-  
-  .welcome-accept {
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-between;
-    align-items: baseline;
-  }
-  
-  .welcome-graphic {
-    align-self: flex-start;
-    margin: auto;
-    margin-bottom: 0;
-    margin-top: 0;
-    height: 150px;
-    width: 150px;
-  }
-  
-  .welcome-title {
-    text-align: center;
   }
 
-  .welcome-text {
-    height: 200px;
+#welcome-page { z-index: 99 }
+#choose-peername-page { z-index: 98 }
+#no-datasets-page { z-index: 97 }
+  
+.welcome-center {
+  width: 600px;
+  padding: 5em;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly; 
+}
+
+.welcome-accept {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  align-items: baseline;
+}
+
+.welcome-graphic {
+  align-self: flex-start;
+  margin: auto;
+  margin-bottom: 0;
+  margin-top: 0;
+  height: 150px;
+  width: 150px;
+}
+
+.welcome-title {
+  text-align: center;
+}
+
+.welcome-text {
+  height: 200px;
+}
+
+.choose-peername-center {
+  width: 600px;
+  padding: 5em;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+.choose-peername-accept {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  align-items: baseline;
+}
+
+.choose-peername-peername {
+  height: 60px;
+}
+
+.choose-peername-text {
+  height: 200px;
+}
+
+.choose-peername-input {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  height: 150px;
+}
+
+#choose-peername-spinner {
+  height: 27px;
+}
+
+.no-datasets-content {
+  height: 230px;
+  width: 100%;
+  // background: black;
+
+  .options {
+    height: 107px;
+    width: 100%;
+    // background: red;
+    margin: 10px 0 5px 0; 
+    border: solid 1px rgba(0, 97, 166, 0.1);
+    border-radius: 5px;
+    padding: 12px;
   }
+}
