refactor(WelcomeTemplate): welcome flow components use the WelcomeTemplate

--- a/app/scss/_forms.scss
+++ b/app/scss/_forms.scss
@@ -457,7 +457,7 @@ select.form-control-lg {
 // custom input styles
 .text-input {
   display: inline-block;
-  border: #e0e0fd solid 1px;
+  border: $border-color solid 1px;
   width: 100%;
   padding: 7px;
   border-radius: 5px;
