--- a/app/scss/_transitions.scss
+++ b/app/scss/_transitions.scss
@@ -30,3 +30,22 @@
   opacity: 0;
   transition: opacity 300ms, transform 300ms;
 }
+
+.modal-enter {
+  opacity: 0;
+  background: black;
+}
+.modal-enter-active {
+  opacity: 1;
+  transition: opacity 300ms, transform 300ms;
+  background: red;
+}
+.modal-exit {
+  opacity: 1;
+  background: green;
+}
+.modal-exit-active {
+  opacity: 0;
+  transition: opacity 300ms, transform 300ms;
+  background: blue;
+}
