--- a/app/scss/_welcome.scss
+++ b/app/scss/_welcome.scss
@@ -15,6 +15,7 @@
     bottom: 0;
   }
 
+#app-loading { z-index: 100 }
 #welcome-page { z-index: 99 }
 #choose-peername-page { z-index: 98 }
 #no-datasets-page { z-index: 97 }
@@ -51,36 +52,17 @@
   text-align: center;
 }
 
-.welcome-text {
+.welcome-content {
   height: 200px;
 }
 
-.choose-peername-center {
-  width: 600px;
-  padding: 5em;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
+.welcome-spinner {
+  width: 100%;
   height: 100%;
   display: flex;
+  align-items: center;
   flex-direction: column;
-  justify-content: space-evenly;
-}
-
-.choose-peername-accept {
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: space-between;
-  align-items: baseline;
-}
-
-.choose-peername-peername {
-  height: 60px;
-}
-
-.choose-peername-text {
-  height: 200px;
+  height: 27px;
 }
 
 .choose-peername-input {
@@ -92,22 +74,15 @@
   height: 150px;
 }
 
-#choose-peername-spinner {
-  height: 27px;
-}
-
-.no-datasets-content {
-  height: 230px;
+.no-datasets-options {
+  height: 107px;
   width: 100%;
-  // background: black;
-
-  .options {
-    height: 107px;
-    width: 100%;
-    // background: red;
-    margin: 10px 0 5px 0; 
-    border: solid 1px rgba(0, 97, 166, 0.1);
-    border-radius: 5px;
-    padding: 12px;
-  }
+  margin: 10px 0 5px 0; 
+  border: solid 1px $border-color;
+  border-radius: 5px;
+  padding: 12px;
+}
+.no-datasets-options:hover {
+  background:$border-color;
+  cursor: pointer;
 }
