--- a/app/scss/_dialog.scss
+++ b/app/scss/_dialog.scss
@@ -17,10 +17,10 @@ dialog {
 
   min-width: 400px;
   max-width: 600px;
-}
 
-dialog::backdrop, dialog + .backdrop {
-  background-color: rgba(0, 0, 0, 0.4);
-  opacity: 1;
-  z-index: $zindex-modal;
+  &::backgrop {
+    background-color: rgba(0, 0, 0, 0.4);
+    opacity: 1;
+    z-index: $zindex-modal;
+  }
 }
