--- a/app/scss/_dataset.scss
+++ b/app/scss/_dataset.scss
@@ -179,7 +179,7 @@ $hover-highlight-color: #F6F8FA;
 
   .sidebar-list-item-text {
     padding: $sidebar-item-padding;
-    flex-direction: column;
+    flex-direction: row;
 
     &:hover {
       background-color: $hover-highlight-color;
@@ -189,29 +189,48 @@ $hover-highlight-color: #F6F8FA;
       background-color: #e6e6e6;
     }
 
-    .text {
-      white-space: nowrap;
-      text-overflow: ellipsis;
-      overflow: hidden;
-      line-height: 1.6rem;
-    }
+    .text-column {
+      flex-direction: column;
+      flex: 1;
 
-    .subtext {
-      display: flex;
-
-      .user-image {
-        height: 16px;
-        width: 16px;
-        margin-right: 4px;
-        border-radius: 2px;
+      .text {
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        line-height: 1.6rem;
       }
 
-      flex: 1;
-      font-size: .65rem;
-      line-height: 1.2rem;
-      white-space: nowrap;
-      text-overflow: ellipsis;
-      overflow: hidden;
+      .subtext {
+        display: flex;
+
+        .user-image {
+          height: 16px;
+          width: 16px;
+          margin-right: 4px;
+          border-radius: 2px;
+        }
+
+        flex: 1;
+        font-size: .65rem;
+        line-height: 1.2rem;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+      }
+    }
+
+    .status-column {
+      text-align: center;
+      line-height: 2.9rem;
+      width: 30px;
+
+        .dot {
+          height: 10px;
+          width: 10px;
+          background-color: transparent;
+          border-radius: 50%;
+          display: inline-block;
+        }
     }
   }
 }
