fix: resize qri icon

--- a/app/scss/_dataset.scss
+++ b/app/scss/_dataset.scss
@@ -31,6 +31,8 @@ $hover-highlight-color: #F6F8FA;
 
     img {
       flex: 0 0 32px;
+      height: 32px;
+      width: 32px;
     }
 
     .text {
