--- a/app/scss/_dialog.scss
+++ b/app/scss/_dialog.scss
@@ -48,23 +48,12 @@ dialog {
       height: 18px;
       width: 18px;
 
-      // Set the left margin to auto so that flexbox positions the button
-      // on the right hand side of the dialog and add a -10px right hand
-      // side margin to put the button where it should be (we use a double
-      // margin for the header itself).
       margin: $spacer * -3 $spacer * -1 0 auto;
       padding: 0;
       background: transparent;
 
       color: $primary-muted;
       cursor: pointer;
-
-      // Let the button deal with all mouse events.
-      // Without this the octicon resets the cursor when
-      // hovering over the <path>.
-      .octicon {
-        pointer-events: none;
-      }
 
       &:hover {
         color: $text;
@@ -87,6 +76,14 @@ dialog {
     }
   }
 
+  // when using the /modal/Tabs component & CSSTransition
+  // wrap all the views of content
+  // .content-wrap class
+  // if you want a different min-height, use an id
+  // then wrap each different view with the .content class
+  // set the CSSTransition `in` param to be true when 
+  // the correct tab is active
+  // as you click through the tabs, they will transition
   .content-wrap {
     min-height: 300px; 
     position: relative;
@@ -97,6 +94,10 @@ dialog {
       height: 100%;
       background: $appBackground;
     }
+  }
+
+  #create-dataset-content-wrap {
+    min-height: 100px;
   }
 
   .tabs {
