--- a/app/scss/_forms.scss
+++ b/app/scss/_forms.scss
@@ -491,3 +491,16 @@ select.input {
     outline: none;
   }
 }
+
+button.input {
+  -moz-transition: all .2s ease-in;
+  -o-transition: all .2s ease-in;
+  -webkit-transition: all .2s ease-in;
+  transition: all .2s ease-in;
+  color: $primary-muted;
+  border: none;
+  cursor: pointer;
+  &:hover {
+    color: $primary;
+  }
+}
