--- a/app/scss/_flex.scss
+++ b/app/scss/_flex.scss
@@ -6,3 +6,11 @@
   align-items: center;
   flex-direction: column;
 }
+
+.flex-space-between {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: space-between;
+  align-items: center;
+}
