--- a/app/scss/_type.scss
+++ b/app/scss/_type.scss
@@ -99,7 +99,7 @@ hr {
   margin-top: 0;
   margin-bottom: $spacer-y;
   border: 0;
-  border-top: $hr-border-width solid $hr-border-color;
+  border-top: 1px solid $border-color;
   width: 100%;
 }
 
