--- a/app/scss/_dataset.scss
+++ b/app/scss/_dataset.scss
@@ -199,6 +199,8 @@ $hover-highlight-color: #F6F8FA;
   height: 100%;
   font-size: .9rem;
   cursor: default;
+  display: flex;
+  flex-direction: column;
 
   #tabs {
     height: 30px;
@@ -226,10 +228,46 @@ $hover-highlight-color: #F6F8FA;
     }
   }
 
+  #content {
+    flex-grow: 1;
+    overflow: auto;
+  }
+
   .changes {
     height: 30px;
     padding: 6px;
     background-color: $hover-highlight-color;
+  }
+
+  #save-form {
+    background-color: steelblue;
+    height: 180px;
+    display: flex;
+    flex-direction: column;
+    padding: 6px 0;
+
+    input, textarea {
+      width: 100%;
+    }
+
+    textarea {
+      vertical-align: top;
+      resize: none;
+      height: 100%
+    }
+
+    .title {
+      padding: $sidebar-item-padding;
+    }
+
+    .message {
+      flex-grow: 1;
+      padding: $sidebar-item-padding;
+    }
+
+    .submit {
+      padding: $sidebar-item-padding;
+    }
   }
 }
 
