refactor(ChoosePeername, App): wire up ChoosePeername
- renames `ui/setPeername` to `ui/setHasSetPeername`
- passes new actions down to `App` component, through `AppContainer`
- refactors `onSave` func in OnBoarding
- add`acceptEnabled` (accept button enabled) param to `WelcomeTemplate`, which disables the accept button (and adjusts styling) when false

--- a/app/scss/_type.scss
+++ b/app/scss/_type.scss
@@ -254,6 +254,20 @@ label {
   color: $primary;
 }
 
+.linkDisabled {
+  color: $primary-muted;
+  &:hover {
+    cursor: default;
+  }
+  &:focus {
+    color: $primary-muted;
+  }
+  &:hover, &:focus {
+    color: $primary-muted;   
+    cursor: default;
+  }
+}
+
 .linkMedium {
   font-weight: $font-weight-medium;
   font-size: 15px;
