feat(AppError): show `AppError` component when the backend doesn't respond

--- a/app/scss/_welcome.scss
+++ b/app/scss/_welcome.scss
@@ -15,7 +15,8 @@
     bottom: 0;
   }
 
-#app-loading { z-index: 200 }
+#app-loading { z-index: 201 }
+#app-error { z-index: 200 }
 #welcome-page { z-index: 199 }
 #choose-peername-page { z-index: 198 }
 #no-datasets-page { z-index: 197 }
