--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -31,6 +31,7 @@
 @import "dataset";
 @import "welcome";
 @import "flex";
+@import "toast";
 
 @import '~handsontable/dist/handsontable.full.css';
 @import "dialog"
