feat: implement body pagination

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -32,6 +32,7 @@
 @import "welcome";
 @import "flex";
 @import "toast";
+@import "body";
 
 @import '~handsontable/dist/handsontable.full.css';
 @import "dialog"
