--- a/app/scss/_dataset.scss
+++ b/app/scss/_dataset.scss
@@ -201,6 +201,8 @@ $hover-highlight-color: #F6F8FA;
   cursor: default;
   display: flex;
   flex-direction: column;
+  background: $appBackground;
+  border-right-style: solid 1px $border-color;
 
   #list {
     overflow-y: auto;
@@ -208,7 +210,7 @@ $hover-highlight-color: #F6F8FA;
 
   #tabs {
     height: 30px;
-    display: flex;
+    display: flex; 
 
     .tab {
       width: 50%;
@@ -234,8 +236,18 @@ $hover-highlight-color: #F6F8FA;
 
   #content {
     flex-grow: 1;
-    overflow: auto;
+    height: 100%;
+    position: relative;
+    
+    .sidebar-content {
+      overflow: auto;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background:$appBackground;
+    }
   }
+
 }
 
 ////////////////////////////
