feat: add metadata table layout

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -33,6 +33,7 @@
 @import "flex";
 @import "toast";
 @import "body";
+@import "metadata";
 
 @import '~handsontable/dist/handsontable.full.css';
 @import "dialog"
