--- a/app/scss/_dataset.scss
+++ b/app/scss/_dataset.scss
@@ -116,6 +116,18 @@ $header-font-size: .9rem;
         z-index: 110;
       }
 
+      .main-content {
+        position: relative;
+        width: 100%;
+        height: 100%;
+
+        > div {
+          position: absolute;
+          width: 100%;
+          height: 100%;
+        }
+      }
+
       .component-container {
         display: flex;
         flex-direction: column;
@@ -283,7 +295,6 @@ $header-font-size: .9rem;
       background:$appBackground;
     }
   }
-
 }
 
 ////////////////////////////
