--- a/app/scss/_welcome.scss
+++ b/app/scss/_welcome.scss
@@ -20,6 +20,8 @@
 #welcome-page { z-index: 199 }
 #choose-peername-page { z-index: 198 }
 #no-datasets-page { z-index: 197 }
+
+#spinner-with-icon-wrap { width: 100% }
   
 .welcome-center {
   width: 600px;
