--- a/app/scss/_transitions.scss
+++ b/app/scss/_transitions.scss
@@ -30,6 +30,22 @@
     transition: opacity 300ms, transform 300ms;
   }
 }
+
+.fade-appear {
+  opacity: 0;
+  &::backdrop {
+    opacity: 0;
+  }
+}
+.fade-appear-active {
+  opacity: 1;
+  transition: opacity 300ms, transform 300ms;
+  &::backdrop {
+    opacity: 1;
+    transition: opacity 300ms, transform 300ms;
+  }
+}
+
 .fade-exit {
   opacity: 1;
   &::backdrop {
@@ -61,4 +77,18 @@
 .slide-exit-active {
   max-height: 0px;
   transition: max-height 300ms, transform 300ms;
+}
+
+// outer div
+.transition-group {
+  position:relative;
+  height:100%;
+  width:100%;
+}
+
+// inner divs
+#transition-wrap {
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
