--- a/app/scss/_welcome.scss
+++ b/app/scss/_welcome.scss
@@ -21,7 +21,7 @@
 #choose-peername-page { z-index: 198 }
 #no-datasets-page { z-index: 197 }
 
-#spinner-with-icon-wrap { width: 100% }
+#spinner-with-icon-wrap { width: 100%; height: 100%; position: absolute; }
   
 .welcome-center {
   width: 600px;
