feat: add dataset from dataset list, add JSON display

--- a/app/scss/_dataset-list.scss
+++ b/app/scss/_dataset-list.scss
@@ -16,6 +16,12 @@
 
       #add-button {
         align-self: flex-end;
+        cursor: pointer;
+        color: $primary;
+
+        &:hover {
+          color: $primary-dark;
+        }
       }
     }
 
