--- a/app/scss/_welcome.scss
+++ b/app/scss/_welcome.scss
@@ -19,7 +19,8 @@
 #app-error { z-index: 200 }
 #welcome-page { z-index: 199 }
 #signup-page { z-index: 198 }
-#no-datasets-page { z-index: 197 }
+#signin-page { z-index: 197 }
+#no-datasets-page { z-index: 196 }
 
 #spinner-with-icon-wrap { width: 100%; height: 100%; position: absolute; }
 
